--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </div>
     </section>
 
-	  <!-- Chatbot Section -->
+	  <!-- Chatbot Section 
         <section id="chat" class="section scrollspy">
             <h3 class="page-title white-text teal">Ask Me</h3>
             <div class="container">
@@ -276,7 +276,7 @@
                     <button onclick="sendMessage()">Send</button>
                 </div>
             </div>
-        </section>
+        </section>-->
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
